--- a/src/templates/layout/_header.pug
+++ b/src/templates/layout/_header.pug
@@ -1,7 +1,7 @@
 //-
     Main Header
 
-header.main-header.main-header__fixed
+header.main-header
     .container
         .row.no-gutters.align-items-center.justify-content-between
             a(href="/" class="site-logo__wrapper")
