--- a/src/css/main.css
+++ b/src/css/main.css
@@ -1613,6 +1613,7 @@ html {
   text-decoration: none;
   text-transform: uppercase;
   color: inherit;
+  cursor: pointer;
   padding: 16.5px 20px;
   border: 1px solid #fff;
   outline: 0;
@@ -1657,8 +1658,8 @@ html {
     left: 0; }
   .btn::after {
     content: "";
-    width: 101%;
-    height: 101%;
+    width: 102%;
+    height: 102%;
     position: absolute;
     display: block;
     z-index: -1;
@@ -1669,6 +1670,8 @@ html {
     color: #000; }
     .btn:hover::after {
       background-color: #fff; }
+  .btn > span {
+    position: relative; }
   .btn-primary {
     background-color: rgba(244, 67, 54, 0.1);
     border-color: #f44336; }
@@ -2138,12 +2141,12 @@ a.link, a.no-link {
   border: 1px solid rgba(0, 0, 0, 0.1);
   box-shadow: 0 5px 8px 0 rgba(0, 0, 0, 0.1);
   padding: 25px;
-  margin: 50px 35px;
+  margin: 50px 32.5px;
   transition: 0.3s background-color ease-in-out, 0.3s padding ease-in-out, 0.3s margin ease-in-out; }
   .owl-carousel-services .center > .services-1-item {
     background-color: #fff;
     padding: 40px;
-    margin: 35px 20px; }
+    margin: 35px 17.5px; }
   .services-1-item-icon {
     width: 100%;
     height: 115px;
@@ -2178,6 +2181,51 @@ a.link, a.no-link {
   -webkit-transform: scale(1.5);
       -ms-transform: scale(1.5);
           transform: scale(1.5); }
+
+.portfolio-filters__list {
+  list-style: none;
+  padding: 25px 0;
+  margin: 0; }
+
+.portfolio-filters__button {
+  font-size: 0.95em;
+  font-weight: 400;
+  letter-spacing: 2.5px;
+  color: #757575;
+  margin: 0 5px;
+  transition: 0.15s color ease-in-out, 0.15s border-color ease-in-out; }
+  .portfolio-filters__button::after {
+    display: none; }
+  .portfolio-filters__button:hover {
+    color: #000; }
+  .portfolio-filters__button.active {
+    color: #000;
+    border-color: #000; }
+
+.portfolio-items {
+  position: relative; }
+
+.portfolio-1-item {
+  padding: 25px;
+  margin: 25px;
+  background-color: #1565c0;
+  transition: 0.4s -webkit-transform ease-in-out;
+  transition: 0.4s transform ease-in-out;
+  transition: 0.4s transform ease-in-out, 0.4s -webkit-transform ease-in-out; }
+  .portfolio-1-item:nth-child(odd) {
+    background-color: #f44336; }
+  .portfolio-1-item.hide {
+    -webkit-transform: scale3d(0, 0, 0);
+            transform: scale3d(0, 0, 0);
+    opacity: 0;
+    -ms-filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=0)";
+    filter: alpha(opacity=0); }
+  .portfolio-1-item.show {
+    -webkit-transform: scale3d(1, 1, 1);
+            transform: scale3d(1, 1, 1);
+    opacity: 1;
+    -ms-filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=100)";
+    filter: alpha(opacity=100); }
 
 .heading-separator {
   display: -webkit-flex;
