--- a/src/sass/components/_portfolio.scss
+++ b/src/sass/components/_portfolio.scss
@@ -3,9 +3,64 @@
 //~~~~~~~~~~~~~~~~~~~~~~~~~//
 
 
+// .portfolio-filters__button
+$portfolio-filters__button__font-size: 0.95em !default;
+$portfolio-filters__button__font-weight: $font-weight__normal !default;
+$portfolio-filters__button__color: $secondary-text-color !default;
+// .portfolio-filters__button:hover
+$portfolio-filters__button__hover__color: $color__black-1 !default;
+// .portfolio-filters__button.active
+$portfolio-filters__button__active__color: $color__black-1 !default;
+$portfolio-filters__button__active__border-color: $color__black-1 !default;
+
+
 .portfolio {
     &-wrapper {
         
     }
-    
+    &-filters {
+        &__list {
+            list-style: none;
+            padding: 25px 0;
+            margin: 0;
+        }
+        &__button {
+            font-size: $portfolio-filters__button__font-size;
+            font-weight: $portfolio-filters__button__font-weight;
+            letter-spacing: 2.5px;
+            color: $portfolio-filters__button__color;
+            margin: 0 5px;
+            transition: 0.15s color ease-in-out, 0.15s border-color ease-in-out;
+            &::after {
+                display: none;
+            }
+            &:hover {
+                color: $portfolio-filters__button__hover__color;
+            }
+            &.active {
+                color: $portfolio-filters__button__active__color;
+                border-color: $portfolio-filters__button__active__border-color;
+            }
+        }
+    }
+    &-items {
+        position: relative;
+    }
+    &-1-item {
+        padding: 25px;
+        margin: 25px;
+        background-color: $accent-color;
+        transition: 0.4s transform ease-in-out;
+        &:nth-child(odd) {
+            background-color: $primary-color;
+        }
+        &.hide {
+            transform: scale3d(0, 0, 0);
+            @include opacity(0);
+        }
+        &.show {
+            transform: scale3d(1, 1, 1);
+            @include opacity(1);
+        }
+    }
 }
