--- a/src/templates/components/sections/_portfolio.pug
+++ b/src/templates/components/sections/_portfolio.pug
@@ -15,4 +15,61 @@ section(id="portfolio" class="section portfolio-wrapper")
                 p.section-header-description= data.mainWrapper.portfolioWrapper.header.p
         .row
             .col-12
-                .portfolio sads
+                ul.row.align-content-center.justify-content-center.portfolio-filters__list.portfolio-filters-js
+                    li
+                        button(data-filter-type class="btn portfolio-filters__button active")
+                            span All
+                    li
+                        button(data-filter-type="website" class="btn portfolio-filters__button")
+                            span Websites
+                    li
+                        button(data-filter-type="mailing" class="btn portfolio-filters__button")
+                            span Mailings
+                    li
+                        button(data-filter-type="spa" class="btn portfolio-filters__button")
+                            span Spa
+                    li
+                        button(data-filter-type="api" class="btn portfolio-filters__button")
+                            span Api
+                .row.align-content-center.justify-content-center.portfolio-items.portfolio-items-js
+                    div(data-type="website" class="portfolio-1-item")
+                        h3.heading.heading-5.portfolio-1-item-title Strona ABC
+                        .heading-separator
+                            .heading-separator__line
+                        p.paragraph.ending.portfolio-1-item-description Strona ABC
+                    div(data-type="mailing" class="portfolio-1-item")
+                        h3.heading.heading-5.portfolio-1-item-title Mailing ABC
+                        .heading-separator
+                            .heading-separator__line
+                        p.paragraph.ending.portfolio-1-item-description Mailing ABC
+                    div(data-type="website" class="portfolio-1-item")
+                        h3.heading.heading-5.portfolio-1-item-title Strona ABC
+                        .heading-separator
+                            .heading-separator__line
+                        p.paragraph.ending.portfolio-1-item-description Strona ABC
+                    div(data-type="mailing" class="portfolio-1-item")
+                        h3.heading.heading-5.portfolio-1-item-title Mailing ABC
+                        .heading-separator
+                            .heading-separator__line
+                        p.paragraph.ending.portfolio-1-item-description Mailing ABC
+                    
+                    div(data-type="spa" class="portfolio-1-item")
+                        h3.heading.heading-5.portfolio-1-item-title SPA ABC
+                        .heading-separator
+                            .heading-separator__line
+                        p.paragraph.ending.portfolio-1-item-description SPA ABC
+                    div(data-type="api" class="portfolio-1-item")
+                        h3.heading.heading-5.portfolio-1-item-title API ABC
+                        .heading-separator
+                            .heading-separator__line
+                        p.paragraph.ending.portfolio-1-item-description API ABC
+                    div(data-type="spa" class="portfolio-1-item")
+                        h3.heading.heading-5.portfolio-1-item-title SPA ABC
+                        .heading-separator
+                            .heading-separator__line
+                        p.paragraph.ending.portfolio-1-item-description SPA ABC
+                    div(data-type="api" class="portfolio-1-item")
+                        h3.heading.heading-5.portfolio-1-item-title API ABC
+                        .heading-separator
+                            .heading-separator__line
+                        p.paragraph.ending.portfolio-1-item-description API ABC
