--- a/src/templates/components/sections/_portfolio.pug
+++ b/src/templates/components/sections/_portfolio.pug
@@ -17,7 +17,7 @@ section(id="portfolio" class="section portfolio-wrapper")
             .col-12
                 ul.row.align-content-center.justify-content-center.portfolio-filters__list.portfolio-filters-js
                     li
-                        button(data-filter-type class="btn portfolio-filters__button active")
+                        button(data-filter-type="all" class="btn portfolio-filters__button active")
                             span All
                     li
                         button(data-filter-type="website" class="btn portfolio-filters__button")
@@ -31,45 +31,52 @@ section(id="portfolio" class="section portfolio-wrapper")
                     li
                         button(data-filter-type="api" class="btn portfolio-filters__button")
                             span Api
-                .row.align-content-center.justify-content-center.portfolio-items.portfolio-items-js
-                    div(data-type="website" class="portfolio-1-item")
-                        h3.heading.heading-5.portfolio-1-item-title Strona ABC
+                .row.portfolio-items.portfolio-items-js
+                    div(data-type="website" class="portfolio-item text-center")
+                        h3.heading.heading-5.portfolio-item-title Strona ABC
                         .heading-separator
                             .heading-separator__line
-                        p.paragraph.ending.portfolio-1-item-description Strona ABC
-                    div(data-type="mailing" class="portfolio-1-item")
-                        h3.heading.heading-5.portfolio-1-item-title Mailing ABC
+                        p.paragraph.ending.portfolio-item-description Lorem ipsum dolor sit amet, consectetur
+                            br
+                            | adipiscing elit Lorem ipsum dolor sit amet, consectetur adipiscing elit
+                        div.portfolio-item-buttons
+                            a(href="#" class="btn to-top btn-primary-text") Source code
+                            a(href="#" class="btn to-top btn-primary") Live demo
+                    div(data-type="mailing" class="portfolio-item text-center")
+                        h3.heading.heading-5.portfolio-item-title Mailing ABC
                         .heading-separator
                             .heading-separator__line
-                        p.paragraph.ending.portfolio-1-item-description Mailing ABC
-                    div(data-type="website" class="portfolio-1-item")
-                        h3.heading.heading-5.portfolio-1-item-title Strona ABC
+                        p.paragraph.ending.portfolio-item-description Mailing ABC
+                        div.portfolio-item-buttons
+                            a(href="#" class="btn to-top btn-primary-text") Source code
+                    div(data-type="website" class="portfolio-item text-center")
+                        h3.heading.heading-5.portfolio-item-title Strona ABC
                         .heading-separator
                             .heading-separator__line
-                        p.paragraph.ending.portfolio-1-item-description Strona ABC
-                    div(data-type="mailing" class="portfolio-1-item")
-                        h3.heading.heading-5.portfolio-1-item-title Mailing ABC
+                        p.paragraph.ending.portfolio-item-description Strona ABC
+                    div(data-type="mailing" class="portfolio-item text-center")
+                        h3.heading.heading-5.portfolio-item-title Mailing ABC
                         .heading-separator
                             .heading-separator__line
-                        p.paragraph.ending.portfolio-1-item-description Mailing ABC
+                        p.paragraph.ending.portfolio-item-description Mailing ABC
                     
-                    div(data-type="spa" class="portfolio-1-item")
-                        h3.heading.heading-5.portfolio-1-item-title SPA ABC
+                    div(data-type="spa" class="portfolio-item text-center")
+                        h3.heading.heading-5.portfolio-item-title SPA ABC
                         .heading-separator
                             .heading-separator__line
-                        p.paragraph.ending.portfolio-1-item-description SPA ABC
-                    div(data-type="api" class="portfolio-1-item")
-                        h3.heading.heading-5.portfolio-1-item-title API ABC
+                        p.paragraph.ending.portfolio-item-description SPA ABC
+                    div(data-type="api" class="portfolio-item text-center")
+                        h3.heading.heading-5.portfolio-item-title API ABC
                         .heading-separator
                             .heading-separator__line
-                        p.paragraph.ending.portfolio-1-item-description API ABC
-                    div(data-type="spa" class="portfolio-1-item")
-                        h3.heading.heading-5.portfolio-1-item-title SPA ABC
+                        p.paragraph.ending.portfolio-item-description API ABC
+                    div(data-type="spa" class="portfolio-item text-center")
+                        h3.heading.heading-5.portfolio-item-title SPA ABC
                         .heading-separator
                             .heading-separator__line
-                        p.paragraph.ending.portfolio-1-item-description SPA ABC
-                    div(data-type="api" class="portfolio-1-item")
-                        h3.heading.heading-5.portfolio-1-item-title API ABC
+                        p.paragraph.ending.portfolio-item-description SPA ABC
+                    div(data-type="api" class="portfolio-item text-center")
+                        h3.heading.heading-5.portfolio-item-title API ABC
                         .heading-separator
                             .heading-separator__line
-                        p.paragraph.ending.portfolio-1-item-description API ABC
+                        p.paragraph.ending.portfolio-item-description API ABC
