--- a/src/sass/components/buttons/_buttons.scss
+++ b/src/sass/components/buttons/_buttons.scss
@@ -42,7 +42,9 @@ $btn-twitter__color: $color__twitter !default;
     font-weight: $btn__font-weight;
     text-align: center;
     text-decoration: none;
+    text-overflow: ellipsis;
     text-transform: uppercase;
+    white-space: nowrap;
     color: inherit;
     cursor: pointer;
     padding: 16.5px 20px;
