--- a/src/css/main.css
+++ b/src/css/main.css
@@ -1611,7 +1611,9 @@ html {
   font-weight: 700;
   text-align: center;
   text-decoration: none;
+  text-overflow: ellipsis;
   text-transform: uppercase;
+  white-space: nowrap;
   color: inherit;
   cursor: pointer;
   padding: 16.5px 20px;
@@ -1674,56 +1676,67 @@ html {
     position: relative; }
   .btn-primary {
     background-color: rgba(244, 67, 54, 0.1);
+    color: #f44336;
     border-color: #f44336; }
     .btn-primary:hover::after {
       background-color: #f44336; }
   .btn-primary-dark {
     background-color: rgba(198, 40, 40, 0.1);
+    color: #c62828;
     border-color: #c62828; }
     .btn-primary-dark:hover::after {
       background-color: #c62828; }
   .btn-primary-light {
     background-color: rgba(254, 204, 209, 0.1);
+    color: #feccd1;
     border-color: #feccd1; }
     .btn-primary-light:hover::after {
       background-color: #feccd1; }
   .btn-primary-text {
     background-color: rgba(33, 33, 33, 0.1);
+    color: #212121;
     border-color: #212121; }
     .btn-primary-text:hover::after {
       background-color: #212121; }
   .btn-accent {
     background-color: rgba(21, 101, 192, 0.1);
+    color: #1565c0;
     border-color: #1565c0; }
     .btn-accent:hover::after {
       background-color: #1565c0; }
   .btn-codepen {
     background-color: rgba(255, 107, 107, 0.1);
+    color: #ff6b6b;
     border-color: #ff6b6b; }
     .btn-codepen:hover::after {
       background-color: #ff6b6b; }
   .btn-facebook {
     background-color: rgba(59, 89, 152, 0.1);
+    color: #3b5998;
     border-color: #3b5998; }
     .btn-facebook:hover::after {
       background-color: #3b5998; }
   .btn-github {
     background-color: rgba(97, 67, 129, 0.1);
+    color: #614381;
     border-color: #614381; }
     .btn-github:hover::after {
       background-color: #614381; }
   .btn-gplus {
     background-color: rgba(221, 75, 57, 0.1);
+    color: #dd4b39;
     border-color: #dd4b39; }
     .btn-gplus:hover::after {
       background-color: #dd4b39; }
   .btn-linkedin {
     background-color: rgba(0, 119, 181, 0.1);
+    color: #0077b5;
     border-color: #0077b5; }
     .btn-linkedin:hover::after {
       background-color: #0077b5; }
   .btn-twitter {
     background-color: rgba(0, 172, 237, 0.1);
+    color: #00aced;
     border-color: #00aced; }
     .btn-twitter:hover::after {
       background-color: #00aced; }
@@ -2188,9 +2201,9 @@ a.link, a.no-link {
   margin: 0; }
 
 .portfolio-filters__button {
+  font-family: "Raleway";
   font-size: 0.95em;
   font-weight: 400;
-  letter-spacing: 2.5px;
   color: #757575;
   margin: 5px;
   transition: 0.15s color ease-in-out, 0.15s border-color ease-in-out; }
@@ -2203,37 +2216,75 @@ a.link, a.no-link {
     border-color: #f44336; }
 
 .portfolio-items {
-  min-height: 200px;
+  min-height: 250px;
   position: relative;
   transition: 0.3s height ease-in-out; }
 
 .portfolio-item {
   width: 33.33333%;
   height: 250px;
-  background-color: #fafafa;
-  display: block;
-  padding: 25px;
-  border: 1px solid #212121;
+  position: relative;
+  padding: 10px;
   transition-delay: 0;
-  transition-duration: 0.4s;
-  transition-property: position, left, top, opacity, -webkit-transform;
-  transition-property: position, left, top, transform, opacity;
-  transition-property: position, left, top, transform, opacity, -webkit-transform;
+  transition-duration: 0.3s;
+  transition-property: left, top, visibility, opacity, -webkit-transform;
+  transition-property: left, top, visibility, transform, opacity;
+  transition-property: left, top, visibility, transform, opacity, -webkit-transform;
   transition-timing-function: ease-in-out; }
-  @media screen and (max-width: 1199px) {
-    .portfolio-item {
-      width: 100%; } }
+  .portfolio-item__figure {
+    position: relative;
+    overflow: hidden;
+    margin: 0; }
+    .portfolio-item__figure::after {
+      content: "";
+      background-color: rgba(0, 0, 0, 0.15);
+      display: block;
+      transition: 0.3s background-color ease-in-out; }
+    .portfolio-item__figure:hover::after {
+      background-color: rgba(0, 0, 0, 0.75); }
+  .portfolio-item__img {
+    z-index: -1;
+    object-fit: cover;
+    transition: 0.3s -webkit-transform ease-in-out;
+    transition: 0.3s transform ease-in-out;
+    transition: 0.3s transform ease-in-out, 0.3s -webkit-transform ease-in-out; }
+  .portfolio-item__figure:hover .portfolio-item__img {
+    -webkit-transform: scale(1.25);
+        -ms-transform: scale(1.25);
+            transform: scale(1.25); }
+  .portfolio-item__figcaption {
+    z-index: 1;
+    visibility: hidden;
+    padding: 25px;
+    opacity: 0;
+    -ms-filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=0)";
+    filter: alpha(opacity=0);
+    transition: 0.3s opacity ease-in-out, 0.3s visibility ease-in-out; }
+  .portfolio-item__figure:hover .portfolio-item__figcaption {
+    visibility: visible;
+    opacity: 1;
+    -ms-filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=100)";
+    filter: alpha(opacity=100); }
+  .portfolio-item__figure, .portfolio-item__figure::after, .portfolio-item__img, .portfolio-item__figcaption {
+    width: 100%;
+    height: 100%; }
+  .portfolio-item__figure::after, .portfolio-item__figcaption {
+    position: absolute;
+    left: 0;
+    top: 0; }
   .portfolio-item-title {
-    margin-top: 15px; }
+    margin-top: 0.5em; }
   .portfolio-item-description {
     overflow: hidden;
     text-overflow: ellipsis;
     white-space: nowrap; }
+  .portfolio-item-title, .portfolio-item-description {
+    color: #fff; }
   .portfolio-item-buttons {
     margin-top: 25px; }
     .portfolio-item-buttons > .btn {
-      width: 49%;
-      margin: 0 0.5%; }
+      width: calc(50% - 10px);
+      margin: 0 5px; }
   .portfolio-item.hide {
     visibility: hidden;
     -webkit-transform: scale(0);
@@ -2248,15 +2299,6 @@ a.link, a.no-link {
     opacity: 1;
     -ms-filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=100)";
     filter: alpha(opacity=100); }
-
-@media screen and (max-width: 1199px) {
-  .main-header,
-  .main-footer {
-    display: none; }
-  .section {
-    display: none; }
-    .section.portfolio-wrapper {
-      display: block; } }
 
 .heading-separator {
   display: -webkit-flex;
